samples/_failures_safe/1761376338_855acb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53e8b68b.c: In function ‘main’:
./samples/SAFE/__tmp_53e8b68b.c:138:9: error: expected expression at end of input
  138 |         choice = read_int("Select operation (1-4): ", 1,
      |         ^~~~~~
./samples/SAFE/__tmp_53e8b68b.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53e8b68b.c:138:9: error: expected declaration or statement at end of input
